update-error-footer
ok

--- a/CD/style.css
+++ b/CD/style.css
@@ -48,9 +48,10 @@
 	padding: 0px;
 	margin: 0px;
 }
-.footer .abc{
+.footer .row{
 	background-color: #666;
 }
+
 .footer-left{
 
 	text-align: center;
