--- a/CD/style.css
+++ b/CD/style.css
@@ -149,7 +149,7 @@ div.container-fluid {
     font-size: 10pt;
 }
 
-.list-group-item div {
+.list-group-item+div {
     flex: 1;
 }
 
@@ -167,6 +167,34 @@ div.container-fluid {
 
 .set-size {
     height: 41px;
+}
+
+.feature .title {
+    color: #FFF;
+    font-size: 12px;
+    font-family: "lucida sans", sans-serif;
+    padding: 2px;
+    background: #6F777B;
+}
+
+.feature img {
+    width: 100%;
+    height: 206px;
+}
+
+.icon-news {
+    background-color: white !important;
+}
+
+.icon-news img {
+    max-width: 65px;
+    max-height: 100%;
+    display: block;
+    margin-top: 3px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    vertical-align: middle;
 }
 
 
