--- a/CD/tbldkh.css
+++ b/CD/tbldkh.css
@@ -67,3 +67,24 @@
 	margin: 0; 
 	padding: 0;
 }
+.container .tittle{
+	text-align: center;
+}
+.tittle h4{
+	font-size: 18px;
+}
+.tittle h5{
+	font-size: 14px;
+	color: #000080;
+}
+th{
+	background-color: #c0cad6;
+	font-size: 14px;
+	font-weight: normal;
+}
+.hdt{
+	line-height: 100%;
+	text-align: center;
+}
+
+
