--- a/CD/style.css
+++ b/CD/style.css
@@ -5,6 +5,10 @@
     -moz-box-sizing: border-box;
 }
 
+ul {
+    list-style-type: none;
+}
+
 .header-left {
     text-align: center;
 }
@@ -246,6 +250,24 @@ div.container-fluid {
 
 .table-search span {
     margin-right: 5px;
+}
+
+.table-search ul li {
+    display: flex;
+    flex-direction: row;
+    margin: 10px 0;
+}
+
+.table-search ul li span {
+    font-weight: bold;
+    color: #333333;
+    font-size: 10pt;
+    text-align: right;
+    width: 130px;
+}
+
+.table-search ul li input {
+    width: 120px;
 }
 
 .table-search h3 {
