--- a/CD/style.css
+++ b/CD/style.css
@@ -142,6 +142,7 @@ div.container-fluid {
 }
 
 .user input {
+    padding: .375rem .75rem;
     position: absolute;
     height: 32px;
     width: 92%;
