--- a/MyLaravel/resources/views/giao dien admin/index.html
+++ b/MyLaravel/resources/views/giao dien admin/index.html
@@ -41,22 +41,22 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item li-first">
-                            <a class="nav-link" href="#"><span><i class="fas fa-coffee"></i></span>&ensp;Trang chủ</a>
+                            <a class="nav-link" href="#"><span><i class="fas fa-home"></i></span>&ensp;Trang chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Chuongtrinhdaotao.html"><span><i class="fas fa-car"></i></span>&ensp;chương trình đào tạo</a>
+                            <a class="nav-link" href="Chuongtrinhdaotao.html"><span><i class="fas fa-book"></i></span>&ensp;chương trình đào tạo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="TBLDKH.html"><span><i class="fas fa-car"></i></span>&ensp;lịch đăng kí học</a>
+                            <a class="nav-link" href="TBLDKH.html"><span><i class="fas fa-calendar-alt"></i></span>&ensp;lịch đăng kí học</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Tracuuvanbang.html"><span><i class="fas fa-car"></i></span>&ensp;tra cứu văn bằng</a>
+                            <a class="nav-link" href="Tracuuvanbang.html"><span><i class="fas fa-search"></i></span>&ensp;tra cứu văn bằng</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="huongdandangki.html"><span><i class="fas fa-car"></i></span>&ensp;hướng dẫn đăng ký</a>
+                            <a class="nav-link" href="huongdandangki.html"><span><i class="fas fa-question-circle"></i></span>&ensp;hướng dẫn đăng ký</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span><i class="fas fa-car"></i></span>&ensp;diễn đàn</a>
+                            <a class="nav-link" href="#"><span><i class="fas fa-user"></i></i></span>&ensp;diễn đàn</a>
                         </li>
                     </ul>
                 </div>
